--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment": "^2.24.0",
+    "rimraf": "^3.0.2",
     "screenfull": "^5.0.2",
     "vant": "^2.12.26",
+    "vinyl-fs": "^3.0.3",
+    "vinyl-ftp": "^0.6.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
@@ -41,7 +44,14 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "generator-star-spacing": "off",
+      "no-tabs":"off",
+      "no-unused-vars":"off",
+      "no-console":"off",
+      "no-irregular-whitespace":"off",
+      "no-debugger": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
